k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nodejs-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-sample
  template:
    metadata:
      labels:
        app: nodejs-sample
    spec:
      containers:
        - name: nodejs-sample
          image: nodejs-image:latest
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
