k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nodejs-sample
spec:
  ports:
    - name: http-3001
      port: 3001
      protocol: TCP
      targetPort: 3001
  selector:
    app: nodejs-sample
