k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: nodejs-sample
spec:
  port:
    targetPort: http-3001
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nodejs-sample
    weight: 100
  wildcardPolicy: None
